# depthmapQ

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  version.h  version.hpp  version_defs.h.in
.githooks/: pre-commit
.github/workflows/: cmake-macos-13.yml  cmake-macos.yml  cmake-single-platform.yml  cmake-ubuntu-latest.yml  cmake-windows.yml  nightly-macos-13.yml  nightly-macos.yml  nightly-ubuntu-latest.yml  nightly-windows.yml
.reuse/: .dep5.swp  dep5
GuiUnitTest/: CMakeLists.txt  testsettings.cpp  testviewhelpers.cpp
acanthis/: CMakeLists.txt  aqmapviewmodel.cpp  aqmapviewmodel.h  attributeitem.h  coreapplication.cpp  coreapplication.h  documentmanager.cpp  documentmanager.h  graphmodel.cpp  graphmodel.h  graphviewmodel.h  interfaceversion.h  main.cpp  maplayer.h  pixelmaplayer.cpp  pixelmaplayer.h  settings.h  settingsimpl.h  shapegraphlayer.cpp  shapegraphlayer.h  shapemaplayer.cpp  shapemaplayer.h  treeitem.h
acanthis/agl/: CMakeLists.txt
acanthis/agl/base/: agldynamicline.cpp  agldynamicline.h  agldynamicrect.cpp  agldynamicrect.h  agllines.cpp  agllines.h  agllinesuniform.cpp  agllinesuniform.h  aglobject.h  aglrastertexture.cpp  aglrastertexture.h  agltriangles.cpp  agltriangles.h  agltrianglesuniform.cpp  agltrianglesuniform.h
acanthis/agl/composite/: aglgraph.cpp  aglgraph.h  aglmap.h  aglpixelmap.cpp  (+5 more)
acanthis/dialogs/: CMakeLists.txt  licenseagreement.cpp  licenseagreement.h
acanthis/scenegraph/: AGLMapViewportWrapper.qml  AGLSplitView.qml  GraphDisplay.qml  MainToolBar.qml  MainWindow.qml  MapPanel.qml  MapTreeView.qml  Panel.qml  PanelHandle.qml  RowActionButton.qml  TableViewColumn.qml  Theme.qml  TopBar.qml  TreeView.qml  UiConstants.qml  ViewListModel.qml  mainMobile.qml
ci/: build.sh  runTests.sh
depthmapX/: CMakeLists.txt  GraphDoc.cpp  GraphDoc.h  compatibilitydefines.h  coreapplication.cpp  coreapplication.h  coreapplication.hpp  graphdoc.cpp  graphdoc.h  graphdoc.hpp  imainwindowmodulefactory.h  imainwindowmodulefactory.hpp  indexWidget.cpp  indexWidget.h  interfaceversion.h  interfaceversion.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindowfactory.cpp  mainwindowfactory.h  mainwindowfactory.hpp  mainwindowhelpers.cpp  mainwindowhelpers.hpp  mainwindowmodulefactory.cpp  mainwindowmoduleregistry.cpp  mainwindowmoduleregistry.hpp  mdichild.cpp  mdichild.h  renderthread.cpp  settings.h  settingsimpl.cpp  settingsimpl.h  settingsimpl.hpp  treeWindow.cpp  treeWindow.h
depthmapX/dialogs/: AboutDlg.cpp  AboutDlg.h  AboutDlg.hpp  AgentAnalysisDlg.cpp  AgentAnalysisDlg.h  AgentAnalysisDlg.hpp  AttributeChooserDlg.cpp  AttributeChooserDlg.h  AttributeSummary.cpp  AttributeSummary.h  AxialAnalysisOptionsDlg.cpp  AxialAnalysisOptionsDlg.h  AxialAnalysisOptionsDlg.hpp  CMakeLists.txt  ColourScaleDlg.cpp  ColourScaleDlg.h  ColourScaleDlg.hpp  ColumnPropertiesDlg.cpp  ColumnPropertiesDlg.h  ColumnPropertiesDlg.hpp  ConvertShapesDlg.cpp  ConvertShapesDlg.h  EditConnectionsDlg.cpp  EditConnectionsDlg.h  FewestLineOptionsDlg.cpp  FewestLineOptionsDlg.h  FewestLineOptionsDlg.hpp  FilePropertiesDlg.cpp  FilePropertiesDlg.h  FilePropertiesDlg.hpp  FindLocDlg.cpp  FindLocDlg.h  GridDialog.cpp  GridDialog.h  GridDialog.hpp  InsertColumnDlg.cpp  InsertColumnDlg.h  InsertColumnDlg.hpp  IsovistPathDlg.cpp  IsovistPathDlg.h  (+31 more)
depthmapX/salaobj/: CMakeLists.txt  attributemapdx.h  metagraphdx.cpp  metagraphdx.h  pointmapdx.cpp  pointmapdx.h  shapegraphdx.cpp  shapemapdx.cpp  shapemapdx.h  shapemapgroupdatadx.cpp  shapemapgroupdatadx.h
depthmapX/views/: CMakeLists.txt  mapview.cpp  mapview.h  mapview.hpp  viewhelpers.cpp  viewhelpers.h  viewhelpers.hpp
depthmapXTest/: CMakeLists.txt  testgllines.cpp  testgllinesuniform.cpp  testglrastertexture.cpp  testmetagraphdx.cpp  testsettings.cpp  testviewhelpers.cpp
docs/: about.md  building.md  commandline.md  gui.md  howdoi.md  index.md
moduleTest/: CMakeLists.txt
modules/: CMakeLists.txt
modules/segmentshortestpaths/: CMakeLists.txt
modules/segmentshortestpaths/cli/: CMakeLists.txt
modules/segmentshortestpaths/cliTest/: CMakeLists.txt  segmentshortestpathparsertest.cpp
modules/segmentshortestpaths/core/: CMakeLists.txt
modules/segmentshortestpaths/gui/: CMakeLists.txt  segmentpathsmainwindow.cpp  segmentpathsmainwindow.h  segmentpathsmainwindow.hpp  uictrigger.cpp
modules/uictrigger/: CMakeLists.txt
modules/uictrigger/gui/: CMakeLists.txt
modules/vgaparallel/gui/: CMakeLists.txt  vgaparallelmainwindow.cpp  vgaparallelmainwindow.h  vgaparallelmainwindow.hpp
modules/vgapaths/: CMakeLists.txt
modules/vgapaths/gui/: CMakeLists.txt  vgapathsmainwindow.cpp  vgapathsmainwindow.h  vgapathsmainwindow.hpp
qtgui/: CMakeLists.txt  consts.hpp  coreapplication.cpp  coreapplication.hpp  graphdoc.cpp  graphdoc.hpp  icons.rc  imainwindowmodule.hpp  indexWidget.cpp  indexWidget.hpp  interfaceversion.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindowfactory.cpp  mainwindowhelpers.hpp  make_version_header.bat  make_version_header.sh  renderthread.cpp  resource.qrc  settings.hpp  settingsimpl.hpp  treeWindow.hpp
qtgui/UI/: AboutDlg.ui  ColourScaleDlg.ui  LicenceDialog.ui  PromptReplace.ui  licenseagreement.ui
qtgui/dialogs/: AboutDlg.cpp  AgentAnalysisDlg.cpp  AttributeChooserDlg.cpp  AttributeChooserDlg.hpp  AttributeSummary.cpp  AttributeSummary.hpp  AxialAnalysisOptionsDlg.cpp  AxialAnalysisOptionsDlg.hpp  CMakeLists.txt  ColourScaleDlg.cpp  ColourScaleDlg.hpp  ColumnPropertiesDlg.cpp  ConvertShapesDlg.hpp  FewestLineOptionsDlg.cpp  FindLocDlg.cpp  LayerChooserDlg.hpp  LicenceDialog.hpp  MakeLayerDlg.cpp  MakeOptionsDlg.cpp  PromptReplace.cpp  RenameObjectDlg.hpp  SegmentAnalysisDlg.cpp  SegmentAnalysisDlg.hpp
qtgui/resources/: Info.plist
qtgui/views/: CMakeLists.txt  mapview.cpp  mapview.hpp
qtguiTest/: CMakeLists.txt  testgllines.cpp  testgllinesuniform.cpp  testglrastertexture.cpp  testmetagraphdx.cpp  testsettings.cpp  testviewhelpers.cpp
tools/: build_and_upload.sh  storePerformanceTest.php
tools/build_appimage/: depthmap.desktop  docker-instructions.txt
(+107 files in other folders)
